jenkins job changes

--- a/Ansible/Jenkins/jenkins/tasks/jenkins_jobs.yml
+++ b/Ansible/Jenkins/jenkins/tasks/jenkins_jobs.yml
@@ -45,9 +45,7 @@
     {{ jenkins_cli_command }}
     -s http://localhost:8080/
     -auth {{ jenkins_admin_username }}:{{ jenkins_admin_username }}
-    create-job STG-App
-  args:
-    stdin: "{{ lookup('file', '/tmp/STG-pipeline_job.xml') }}"
+    create-job STG-App < /tmp/STG-pipeline_job.xml"
 
 
 
